--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -50,6 +50,10 @@
     --green-color: #859900;
 }
 
+* {
+    color: var(--base-dark-3-color);
+}
+
 /********
  **** Margin and Spacing rules
  *
@@ -114,27 +118,31 @@
     .company {
         .row {
             display: grid;
-            grid-template-rows: 2;
-            grid-template-columns: repeat(12, 1fr);
         }
         .name {
             font-weight: bold;
             font-size: var(--heading-4-font-size);
-            grid-column: 1 / 8;
             grid-row: 1;
-        }
-        .role {
-            font-size: var(--heading-5-font-size);
-            grid-row: 2;
-            grid-column: 1 / 12;
         }
         .interval {
             font-size: var(--heading-5-font-size);
-            grid-column: 9 / 12;
             grid-row: 1;
             text-align: right;
         }
+        .role {
+            font-size: var(--heading-5-font-size);
+            grid-column: 1 / 3;
 
+            display: grid;
+            .title {
+                grid-row: 1;
+            }
+            .interval {
+                grid-row: 1;
+                text-align: right;
+                font-size: var(--body-text-1-font-size);
+            }
+        }
         .keywords {
             margin-bottom: 0;
             font-size: var(--label-1-font-size);
