--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -13,7 +13,16 @@ layout: default
         <!-- <h2>Professional Profile</h2> -->
         <p class="summary">{{ resume.summary | escape }}</p>
     </div>
+    <div class="proficiencies section">
+        <h2>Proficiencies</h2>
+        <ul class="proficiencies">
+            {%- for group in resume.proficiencies -%}
+            <li><b>{{ group.category }}</b>: {{ group.terms | join: ", " }}</li>
+            {%- endfor -%}
+        </ul>
+    </div>
     <div class="experience section">
+        <h2>Experience</h2>
         <ul class="experience">
             {%- for job in resume.jobHistory -%}
             <li class="company">
@@ -78,14 +87,6 @@ layout: default
                     entry.publication }}
                 </a>
             </li>
-            {%- endfor -%}
-        </ul>
-    </div>
-    <div class="proficiencies section">
-        <h2>Proficiencies</h2>
-        <ul class="proficiencies">
-            {%- for group in resume.proficiencies -%}
-            <li><b>{{ group.category }}</b>: {{ group.terms | join: ", " }}</li>
             {%- endfor -%}
         </ul>
     </div>
