--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -11,6 +11,7 @@
      * Credit "Size me up" by Saron Yitbarek aka Not A Designer
      * https://notadesigner.io/p/typographic-scales
      ********/
+    --title-font-size: calc(3.627rem * 1.125);
     --display-1-font-size: 3.247rem;
     --display-2-font-size: 2.887rem;
     --heading-1-font-size: 2.566rem;
@@ -72,65 +73,78 @@
 
 /**
  * TODO:
- * - Fold duration onto same line as company
  * - New font family, at least for Company name. Looks eh.
  * - Intro section needs better layout in general.
  * - Remove "Professional Profile" header? Right into intro?
+ * - Add "Experience" / "Job History" section
  * - Add link to PDF version that I submit to websites.
  * - Reduce to 2pg? Rename to CV?
  * - Cleaner display for University name
+ * - Create a "Table of Contents" sidebar
  **/
 
+.resume {
+    margin: 0 2rem;
+
+    a {
+        text-decoration: underline;
+    }
+}
 .resume .section {
+    margin: 2rem 0;
+
     h1 {
         font-size: var(--display-1-font-size);
     }
     h2 {
-        font-size: var(--heading-1-font-size);
+        font-size: var(--heading-2-font-size);
     }
 }
 
 .resume .introduction {
     display: grid;
-    grid-template-rows: 2;
-    grid-template-columns: 1fr 1fr;
     .name {
-        font-size: var(--heading-1-font-size);
+        font-size: var(--title-font-size);
+        font-weight: bold;
+        grid-row: 1;
     }
     .role {
-        text-align: right;
-        font-size: var(--heading-1-font-size);
+        font-size: var(--heading-2-font-size);
+        grid-row: 2;
     }
     .location {
-        text-align: left;
-        grid-column: 1;
+        grid-row: 3;
         font-size: var(--heading-6-font-size);
     }
 }
 
 .resume .experience {
-    ul.experience,
-    li.company {
-        margin: 1rem 0;
+    h2 {
+        margin-bottom: 0;
+    }
+    ul.experience {
         list-style: none;
     }
 
     .company {
+        margin: 1rem 0 4rem;
+        list-style: none;
+
         .row {
             display: grid;
         }
         .name {
             font-weight: bold;
-            font-size: var(--heading-4-font-size);
+            font-size: var(--heading-6-font-size);
             grid-row: 1;
         }
         .interval {
-            font-size: var(--heading-5-font-size);
+            font-size: var(--heading-6-font-size);
             grid-row: 1;
             text-align: right;
         }
         .role {
-            font-size: var(--heading-5-font-size);
+            font-size: var(--heading-6-font-size);
             grid-column: 1 / 3;
 
             display: grid;
@@ -144,12 +158,17 @@
             }
         }
         .keywords {
+            margin-top: 0.5rem;
             margin-bottom: 0;
             font-size: var(--label-1-font-size);
             color: var(--base-dark-1-color);
         }
         ul.details {
-            margin-left: 1rem;
+            margin: 1.5rem 0 0 1rem;
+
+            li {
+                margin: 1rem 0 0 2rem;
+            }
         }
     }
 }
@@ -161,11 +180,22 @@
 }
 
 .resume .education {
-    font-size: var(--heading-5-font-size);
+    font-size: var(--heading-6-font-size);
     .institution {
-        font-size: var(--heading-5-font-size);
+        font-size: var(--heading-6-font-size);
     }
     .degree {
         font-size: var(--body-text-1-font-size);
     }
 }
+
+/*
+-Between sections, top and bottom
+-Between companies, top and bottom
+-Top and left margin of details class
+-Resume div, left and right, to decrease the number of words on each line
+
+Also consider sizing's role in creating visual hierarchy.
+-Your name is the most important part of this. Make it way bigger, and probably bold.
+-Decrease the size of the role titles, and bring them closer to the company names, since they go together
+*/
